<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="plus_btn_text">Plus</string>
    <string name="minus_btn_text">Minus</string>
    <string name="random_btn_text">Generate</string>

    <string name="int_range_text">%d ~ %d</string>
    <string name="int_init_text">0</string>
    <string name="string_placeholder">%s</string>
    <string name="int_place_holder">%d</string>
    <string name="string_ratio_place_holder">%s / %s</string>
    <string name="text_input_title_hint">Title</string>
    <string name="text_input_description_hint">Description</string>
    <string name="text_view_period_default">"Period: "</string>
    <string name="text_view_target_complete_days">Target Complete Day(s): </string>
    <string name="text_view_target_number">"Target Number: "</string>
    <string name="text_view_use_number_target">Number Mode  </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_create_progress">Create</string>
    <string name="text_title_place_holder">Title</string>
    <string name="text_description_place_holder">description</string>
    <string name="text_period_place_holder">週期</string>
    <string name="text_passedperiod_place_holder">已經過</string>
    <string name="text_currentcomplete_place_holder">總達成數</string>
    <string name="text_targetcompleted_place_holder">總應達成數</string>
    <string name="text_maxstrike_place_holder">最高紀錄</string>
    <string name="text_strike_place_holder">連續達成</string>
    <string name="text_target_place_holder">target</string>
    <string name="text_targetnum_place_holder">目標數量</string>
    <string name="text_currentnum_place_holder">目前數量</string>
    <string name="text_count_place_holder">總已做數量</string>
    <string name="username_place_holder">username</string>
    <string name="test_iscompleted_place_holder">iscompleted</string>
    <string name="test_totalcompleted_place_holder">totalcompleted</string>
    <string name="viplevel_place_holder">viplevel</string>
    <string name="text_targetcount_place_holder">總應做數量</string>
    <string name="retrun_place_holder">return</string>
    <string name="button_return">return</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="text_cancel">Cancel</string>

    <string name="my_view">btn_my_view</string>
    <string name="mycontent">mycontent</string>
    <string name="what_can_i_do">what can I do</string>
    <string name="username">username</string>
    <string name="slash">/</string>
    <string name="period_days_placeholder">(%s天/週期)</string>
</resources>
